--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
           <h2 class="benefits-title visually-hidden">Benefits</h2>
           <ul class="benefits-list">
             <li class="benefits-item">
+              <div class="benefits-icon-container">
+                <svg width="64" height="64" class="benefits-item-icon">
+                  <use href="./images/icons-sprite.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="benefits-subtitle">Strategy</h3>
               <p class="benefits-item-text">
                 Our goal is to identify the business problem to walk away with
@@ -73,6 +78,11 @@
               </p>
             </li>
             <li class="benefits-item">
+              <div class="benefits-icon-container">
+                <svg width="64" height="64" class="benefits-item-icon">
+                  <use href="./images/icons-sprite.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="benefits-subtitle">Punctuality</h3>
               <p class="benefits-item-text">
                 Bring the key message to the brand's audience for the best price
@@ -80,6 +90,11 @@
               </p>
             </li>
             <li class="benefits-item">
+              <div class="benefits-icon-container">
+                <svg width="64" height="64" class="benefits-item-icon">
+                  <use href="./images/icons-sprite.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="benefits-subtitle">Diligence</h3>
               <p class="benefits-item-text">
                 Research and confirm brands that present the strongest digital
@@ -87,6 +102,11 @@
               </p>
             </li>
             <li class="benefits-item">
+              <div class="benefits-icon-container">
+                <svg width="64" height="64" class="benefits-item-icon">
+                  <use href="./images/icons-sprite.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="benefits-subtitle">Technologies</h3>
               <p class="benefits-item-text">
                 Design practice focused on digital experiences. We bring forth a
