--- a/index.html
+++ b/index.html
@@ -133,6 +133,46 @@
               <div class="team-item-info">
                 <h3 class="team-subtitle">Mark Guerrero</h3>
                 <p class="team-item-text">Product Designer</p>
+                <div class="team-icons-container">
+                  <ul class="team-icons-list">
+                    <li class="team-icon-item">
+                      <a href="" class="team-soc-link">
+                        <svg width="16" height="16" class="team-icon-svg">
+                          <use
+                            href="./images/icons-sprite.svg#icon-instagram"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-icon-item">
+                      <a href="" class="team-soc-link">
+                        <svg width="16" height="16" class="team-icon-svg">
+                          <use
+                            href="./images/icons-sprite.svg#icon-twitter"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-icon-item">
+                      <a href="" class="team-soc-link">
+                        <svg width="16" height="16" class="team-icon-svg">
+                          <use
+                            href="./images/icons-sprite.svg#icon-facebook"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-icon-item">
+                      <a href="" class="team-soc-link">
+                        <svg width="16" height="16" class="team-icon-svg">
+                          <use
+                            href="./images/icons-sprite.svg#icon-linkedin"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="team-item">
@@ -146,6 +186,46 @@
               <div class="team-item-info">
                 <h3 class="team-subtitle">Tom Ford</h3>
                 <p class="team-item-text">Frontend Developer</p>
+                <div class="team-icons-container">
+                  <ul class="team-icons-list">
+                    <li class="team-icon-item">
+                      <a href="" class="team-soc-link">
+                        <svg width="16" height="16" class="team-icon-svg">
+                          <use
+                            href="./images/icons-sprite.svg#icon-instagram"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-icon-item">
+                      <a href="" class="team-soc-link">
+                        <svg width="16" height="16" class="team-icon-svg">
+                          <use
+                            href="./images/icons-sprite.svg#icon-twitter"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-icon-item">
+                      <a href="" class="team-soc-link">
+                        <svg width="16" height="16" class="team-icon-svg">
+                          <use
+                            href="./images/icons-sprite.svg#icon-facebook"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-icon-item">
+                      <a href="" class="team-soc-link">
+                        <svg width="16" height="16" class="team-icon-svg">
+                          <use
+                            href="./images/icons-sprite.svg#icon-linkedin"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="team-item">
@@ -159,6 +239,46 @@
               <div class="team-item-info">
                 <h3 class="team-subtitle">Camila Garcia</h3>
                 <p class="team-item-text">Marketing</p>
+                <div class="team-icons-container">
+                  <ul class="team-icons-list">
+                    <li class="team-icon-item">
+                      <a href="" class="team-soc-link">
+                        <svg width="16" height="16" class="team-icon-svg">
+                          <use
+                            href="./images/icons-sprite.svg#icon-instagram"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-icon-item">
+                      <a href="" class="team-soc-link">
+                        <svg width="16" height="16" class="team-icon-svg">
+                          <use
+                            href="./images/icons-sprite.svg#icon-twitter"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-icon-item">
+                      <a href="" class="team-soc-link">
+                        <svg width="16" height="16" class="team-icon-svg">
+                          <use
+                            href="./images/icons-sprite.svg#icon-facebook"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-icon-item">
+                      <a href="" class="team-soc-link">
+                        <svg width="16" height="16" class="team-icon-svg">
+                          <use
+                            href="./images/icons-sprite.svg#icon-linkedin"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="team-item">
@@ -172,6 +292,46 @@
               <div class="team-item-info">
                 <h3 class="team-subtitle">Daniel Wilson</h3>
                 <p class="team-item-text">UI Designer</p>
+                <div class="team-icons-container">
+                  <ul class="team-icons-list">
+                    <li class="team-icon-item">
+                      <a href="" class="team-soc-link">
+                        <svg width="16" height="16" class="team-icon-svg">
+                          <use
+                            href="./images/icons-sprite.svg#icon-instagram"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-icon-item">
+                      <a href="" class="team-soc-link">
+                        <svg width="16" height="16" class="team-icon-svg">
+                          <use
+                            href="./images/icons-sprite.svg#icon-twitter"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-icon-item">
+                      <a href="" class="team-soc-link">
+                        <svg width="16" height="16" class="team-icon-svg">
+                          <use
+                            href="./images/icons-sprite.svg#icon-facebook"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-icon-item">
+                      <a href="" class="team-soc-link">
+                        <svg width="16" height="16" class="team-icon-svg">
+                          <use
+                            href="./images/icons-sprite.svg#icon-linkedin"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
           </ul>
