--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <div class="team-icons-container">
                   <ul class="team-icons-list">
                     <li class="team-icon-item">
-                      <a href="" class="team-soc-link">
+                      <a href="" target="_blank" class="team-soc-link">
                         <svg width="16" height="16" class="team-icon-svg">
                           <use
                             href="./images/icons-sprite.svg#icon-instagram"
@@ -145,7 +145,7 @@
                       </a>
                     </li>
                     <li class="team-icon-item">
-                      <a href="" class="team-soc-link">
+                      <a href="" target="_blank" class="team-soc-link">
                         <svg width="16" height="16" class="team-icon-svg">
                           <use
                             href="./images/icons-sprite.svg#icon-twitter"
@@ -154,7 +154,7 @@
                       </a>
                     </li>
                     <li class="team-icon-item">
-                      <a href="" class="team-soc-link">
+                      <a href="" target="_blank" class="team-soc-link">
                         <svg width="16" height="16" class="team-icon-svg">
                           <use
                             href="./images/icons-sprite.svg#icon-facebook"
@@ -163,7 +163,7 @@
                       </a>
                     </li>
                     <li class="team-icon-item">
-                      <a href="" class="team-soc-link">
+                      <a href="" target="_blank" class="team-soc-link">
                         <svg width="16" height="16" class="team-icon-svg">
                           <use
                             href="./images/icons-sprite.svg#icon-linkedin"
@@ -344,78 +344,132 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio-list-item1.jpg"
-                alt="App design"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-cover-container">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio-list-item1.jpg"
+                  alt="App design"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-cover-wrap">
+                  <p class="portfolio-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-item-info">
                 <h3 class="portfolio-subtitle">Banking App</h3>
                 <p class="portfolio-item-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio-list-item2.jpg"
-                alt="QR code payment"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-cover-container">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio-list-item2.jpg"
+                  alt="QR code payment"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-cover-wrap">
+                  <p class="portfolio-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-item-info">
                 <h3 class="portfolio-subtitle">Cashless Payment</h3>
                 <p class="portfolio-item-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio-list-item3.jpg"
-                alt="Notebook and smartphone"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-cover-container">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio-list-item3.jpg"
+                  alt="Notebook and smartphone"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-cover-wrap">
+                  <p class="portfolio-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-item-info">
                 <h3 class="portfolio-subtitle">Meditation App</h3>
                 <p class="portfolio-item-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio-list-item4.jpg"
-                alt="Car driving"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-cover-container">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio-list-item4.jpg"
+                  alt="Car driving"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-cover-wrap">
+                  <p class="portfolio-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-item-info">
                 <h3 class="portfolio-subtitle">Taxi Service</h3>
                 <p class="portfolio-item-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio-list-item5.jpg"
-                alt="App illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-cover-container">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio-list-item5.jpg"
+                  alt="App illustrations"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-cover-wrap">
+                  <p class="portfolio-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-item-info">
                 <h3 class="portfolio-subtitle">Screen Illustrations</h3>
                 <p class="portfolio-item-text">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio-list-item6.jpg"
-                alt="Woman with spartphone"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-cover-container">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio-list-item6.jpg"
+                  alt="Woman with spartphone"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-cover-wrap">
+                  <p class="portfolio-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-item-info">
                 <h3 class="portfolio-subtitle">Online Courses</h3>
                 <p class="portfolio-item-text">Marketing</p>
