--- a/index.html
+++ b/index.html
@@ -481,14 +481,49 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
-        <a class="logo logo-footer" href="./index.html"
-          >Web<span class="logo-part-footer">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div class="footer-info">
+          <a class="logo logo-footer" href="./index.html"
+            >Web<span class="logo-part-footer">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-soc-container">
+          <p class="footer-soc-title">Social media</p>
+          <ul class="footer-icons-list">
+            <li class="footer-icon-item">
+              <a href="" target="_blank" class="footer-soc-link">
+                <svg width="24" height="24" class="footer-icon-svg">
+                  <use href="./images/icons-sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item">
+              <a href="" target="_blank" class="footer-soc-link">
+                <svg width="24" height="24" class="footer-icon-svg">
+                  <use href="./images/icons-sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item">
+              <a href="" target="_blank" class="footer-soc-link">
+                <svg width="24" height="24" class="footer-icon-svg">
+                  <use href="./images/icons-sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item">
+              <a href="" target="_blank" class="footer-soc-link">
+                <svg width="24" height="24" class="footer-icon-svg">
+                  <use href="./images/icons-sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
