--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <li class="benefits-item">
               <div class="benefits-icon-container">
                 <svg width="64" height="64" class="benefits-item-icon">
-                  <use href="./images/icons-sprite.svg#icon-antenna"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="benefits-subtitle">Strategy</h3>
@@ -80,7 +80,7 @@
             <li class="benefits-item">
               <div class="benefits-icon-container">
                 <svg width="64" height="64" class="benefits-item-icon">
-                  <use href="./images/icons-sprite.svg#icon-astronaut"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="benefits-subtitle">Punctuality</h3>
@@ -92,7 +92,7 @@
             <li class="benefits-item">
               <div class="benefits-icon-container">
                 <svg width="64" height="64" class="benefits-item-icon">
-                  <use href="./images/icons-sprite.svg#icon-clock"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="benefits-subtitle">Diligence</h3>
@@ -104,7 +104,7 @@
             <li class="benefits-item">
               <div class="benefits-icon-container">
                 <svg width="64" height="64" class="benefits-item-icon">
-                  <use href="./images/icons-sprite.svg#icon-diagram"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="benefits-subtitle">Technologies</h3>
@@ -138,36 +138,28 @@
                     <li class="team-icon-item">
                       <a href="" target="_blank" class="team-soc-link">
                         <svg width="16" height="16" class="team-icon-svg">
-                          <use
-                            href="./images/icons-sprite.svg#icon-instagram"
-                          ></use>
+                          <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-icon-item">
                       <a href="" target="_blank" class="team-soc-link">
                         <svg width="16" height="16" class="team-icon-svg">
-                          <use
-                            href="./images/icons-sprite.svg#icon-twitter"
-                          ></use>
+                          <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-icon-item">
                       <a href="" target="_blank" class="team-soc-link">
                         <svg width="16" height="16" class="team-icon-svg">
-                          <use
-                            href="./images/icons-sprite.svg#icon-facebook"
-                          ></use>
+                          <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-icon-item">
                       <a href="" target="_blank" class="team-soc-link">
                         <svg width="16" height="16" class="team-icon-svg">
-                          <use
-                            href="./images/icons-sprite.svg#icon-linkedin"
-                          ></use>
+                          <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
                     </li>
@@ -191,36 +183,28 @@
                     <li class="team-icon-item">
                       <a href="" class="team-soc-link">
                         <svg width="16" height="16" class="team-icon-svg">
-                          <use
-                            href="./images/icons-sprite.svg#icon-instagram"
-                          ></use>
+                          <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-icon-item">
                       <a href="" class="team-soc-link">
                         <svg width="16" height="16" class="team-icon-svg">
-                          <use
-                            href="./images/icons-sprite.svg#icon-twitter"
-                          ></use>
+                          <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-icon-item">
                       <a href="" class="team-soc-link">
                         <svg width="16" height="16" class="team-icon-svg">
-                          <use
-                            href="./images/icons-sprite.svg#icon-facebook"
-                          ></use>
+                          <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-icon-item">
                       <a href="" class="team-soc-link">
                         <svg width="16" height="16" class="team-icon-svg">
-                          <use
-                            href="./images/icons-sprite.svg#icon-linkedin"
-                          ></use>
+                          <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
                     </li>
@@ -244,36 +228,28 @@
                     <li class="team-icon-item">
                       <a href="" class="team-soc-link">
                         <svg width="16" height="16" class="team-icon-svg">
-                          <use
-                            href="./images/icons-sprite.svg#icon-instagram"
-                          ></use>
+                          <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-icon-item">
                       <a href="" class="team-soc-link">
                         <svg width="16" height="16" class="team-icon-svg">
-                          <use
-                            href="./images/icons-sprite.svg#icon-twitter"
-                          ></use>
+                          <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-icon-item">
                       <a href="" class="team-soc-link">
                         <svg width="16" height="16" class="team-icon-svg">
-                          <use
-                            href="./images/icons-sprite.svg#icon-facebook"
-                          ></use>
+                          <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-icon-item">
                       <a href="" class="team-soc-link">
                         <svg width="16" height="16" class="team-icon-svg">
-                          <use
-                            href="./images/icons-sprite.svg#icon-linkedin"
-                          ></use>
+                          <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
                     </li>
@@ -297,36 +273,28 @@
                     <li class="team-icon-item">
                       <a href="" class="team-soc-link">
                         <svg width="16" height="16" class="team-icon-svg">
-                          <use
-                            href="./images/icons-sprite.svg#icon-instagram"
-                          ></use>
+                          <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-icon-item">
                       <a href="" class="team-soc-link">
                         <svg width="16" height="16" class="team-icon-svg">
-                          <use
-                            href="./images/icons-sprite.svg#icon-twitter"
-                          ></use>
+                          <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-icon-item">
                       <a href="" class="team-soc-link">
                         <svg width="16" height="16" class="team-icon-svg">
-                          <use
-                            href="./images/icons-sprite.svg#icon-facebook"
-                          ></use>
+                          <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-icon-item">
                       <a href="" class="team-soc-link">
                         <svg width="16" height="16" class="team-icon-svg">
-                          <use
-                            href="./images/icons-sprite.svg#icon-linkedin"
-                          ></use>
+                          <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
                     </li>
@@ -497,28 +465,28 @@
             <li class="footer-icon-item">
               <a href="" target="_blank" class="footer-soc-link">
                 <svg width="24" height="24" class="footer-icon-svg">
-                  <use href="./images/icons-sprite.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-icon-item">
               <a href="" target="_blank" class="footer-soc-link">
                 <svg width="24" height="24" class="footer-icon-svg">
-                  <use href="./images/icons-sprite.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-icon-item">
               <a href="" target="_blank" class="footer-soc-link">
                 <svg width="24" height="24" class="footer-icon-svg">
-                  <use href="./images/icons-sprite.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-icon-item">
               <a href="" target="_blank" class="footer-soc-link">
                 <svg width="24" height="24" class="footer-icon-svg">
-                  <use href="./images/icons-sprite.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
