--- a/index.html
+++ b/index.html
@@ -320,13 +320,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="portfolio-cover-wrap">
-                  <p class="portfolio-cover-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="portfolio-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-item-info">
                 <h3 class="portfolio-subtitle">Banking App</h3>
