--- a/index.html
+++ b/index.html
@@ -340,13 +340,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="portfolio-cover-wrap">
-                  <p class="portfolio-cover-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="portfolio-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-item-info">
                 <h3 class="portfolio-subtitle">Cashless Payment</h3>
@@ -362,13 +360,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="portfolio-cover-wrap">
-                  <p class="portfolio-cover-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="portfolio-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-item-info">
                 <h3 class="portfolio-subtitle">Meditation App</h3>
@@ -384,13 +380,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="portfolio-cover-wrap">
-                  <p class="portfolio-cover-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="portfolio-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-item-info">
                 <h3 class="portfolio-subtitle">Taxi Service</h3>
@@ -406,13 +400,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="portfolio-cover-wrap">
-                  <p class="portfolio-cover-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="portfolio-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-item-info">
                 <h3 class="portfolio-subtitle">Screen Illustrations</h3>
@@ -428,13 +420,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="portfolio-cover-wrap">
-                  <p class="portfolio-cover-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="portfolio-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-item-info">
                 <h3 class="portfolio-subtitle">Online Courses</h3>
